<resources>
    <string name="app_name">Forager</string>
    <string name="title_activity_maps">Forager</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="none">None</string>
    <string name="add_marker">Add Marker</string>
    <string name="marquette">Marquette</string>
    <string name="melbourne">Melbourne</string>
    <string name="add_btn">+</string>

    <!-- Facebook login strings -->
    <string name="facebook_app_id">252661716867108</string>
    <string name="fb_login_protocol_scheme">fb252661716867108</string>

    <!-- Google login strings -->
    <string name="google_web_client_id">186648171890-7mjij4c6kdgnebs2e9sn9gumuav8cfcv.apps.googleusercontent.com</string>

    <!-- Bottom navigation menu items -->
    <string name="profile">Profile</string>
    <string name="plants">Plants</string>
    <string name="groups">Groups</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_plants">Search Plants</string>
    <string name="my_plants">My Plants</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_account">Edit Account</string>
</resources>